# swimcord

./: Cargo.toml
.github/workflows/: rust.yml
src/: commands.rs  err.rs  gpt.rs  main.rs
src/commands/: gpt.rs
