[package]
name = "swimcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
songbird = "0.3.0"
thiserror = "1.0.37"
poise = "0.4.1"

[dependencies.serenity]
version = "0.11"
features = ["client", "voice", "rustls_backend"]
default-features = false

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
